Version 2.5.6dev:

* Merged code from WinUAE 2810.
* Updated built-in AROS rom [WinUAE 2.8.1].
* Starting FS-UAE.app with config file works again on OS X.
* Fixed a bug (potential crash) in fs_get_application_exe_path on windows.
* Initial support reading resources from fs-uae.dat (or embedded in the exe).
* Build scripts for SteamOS / Steam runtime version.
* Re-enable compiler optimizations for cpuemu, use -fno-strict-overflow
  to work around the issue that current cpu emulation code assumes signed
  integer overflow behavior.
* Added speedlink_strike_2_gamepad_12_5_1_0_windows.conf [TCD].

Version 2.5.5dev:

* Dual joystick/mouse mode for joystick port 0, both a specific joystick
  device and mouse is enabled at the same time (only when
  joystick_port_0_mode = joystick and a joystick host device is selected).
* Show on-screen gui_message notifications from UAE code.
* Added missing @docdir@ substitution variable.
* More build system updates / removed old cruft.
* BSD make should now also work (in addition to GNU make).
* Environment variable FSGS_RETURN_CURSOR_TO can be used to move the cursor
  to a specific location when FS-UAE quits.
* (Device Helper) Ignore full negative axis motion events on startup.

Version 2.5.4dev:

* Some more autoconf / build updates.

Version 2.5.3dev:

* Merged code from WinUAE 2800.
* Update AROS ROM from WinUAE 2800.
* Debian compat set to 9, allow harding flags.
* Migrated build system to autoconf (not automake).
* Some source code clean to detect features / functions from autoconf.
* Remove use of deprecated Glib function, require Glib >= 2.32.
* Properly fixed build dependencies on auto-generated source code.
* Fixed a problem preventing mouse from working with SDL2 on Windows.

Version 2.5.2dev:

* Merged code from WinUAE 2800b18.
* SDL2 is now default on all platforms (make sdl=1 to override for now).
* Fixes to make the windows version compile with SDL2.
* Fixes for FS-UAE compilation with mingw-w32 4.6.3.