@@ -1,31 +1,0 @@
-version = 2.5.6dev
-
-all: bindist
-
-clean:
-	rm -Rf ../macosx/fs-uae*
-
-bindist: bundle
-	cd fs-uae_$(version)_macosx && GZIP=-9 tar zcfv ../../fs-uae_$(version)_macosx.tar.gz *
-
-bundle:
-	make -C ..
-	rm -Rf fs-uae_$(version)_macosx
-	mkdir -p fs-uae_$(version)_macosx
-	mkdir -p fs-uae_$(version)_macosx/FS-UAE.app/Contents/Frameworks
-	mkdir -p fs-uae_$(version)_macosx/FS-UAE.app/Contents/MacOS
-	mkdir -p fs-uae_$(version)_macosx/FS-UAE.app/Contents/Resources
-	mkdir -p fs-uae_$(version)_macosx/FS-UAE.app/Contents/
-	cp Info.plist PkgInfo fs-uae_$(version)_macosx/FS-UAE.app/Contents/
-	cp ../fs-uae fs-uae_$(version)_macosx/FS-UAE.app/Contents/MacOS/
-	cp ../fs-uae.dat fs-uae_$(version)_macosx/FS-UAE.app/Contents/MacOS/
-	cp ../fs-uae-device-helper fs-uae_$(version)_macosx/FS-UAE.app/Contents/MacOS/
-	cp ../../libfs-capsimage/CAPSImg/libcapsimage.dylib fs-uae_$(version)_macosx/FS-UAE.app/Contents/Frameworks || cp ../../../libfs-capsimage/CAPSImg/libcapsimage.dylib fs-uae_$(version)_macosx/FS-UAE.app/Contents/Frameworks
-	cp -pPR ../share/* fs-uae_$(version)_macosx/FS-UAE.app/Contents/Resources
-	strip fs-uae_$(version)_macosx/FS-UAE.app/Contents/MacOS/*
-	cp ../icon/fs-uae.icns fs-uae_$(version)_macosx/FS-UAE.app/Contents/Resources/
-	cp ../icon/fs-uae-config.icns fs-uae_$(version)_macosx/FS-UAE.app/Contents/Resources/
-	cp -pPR ../licenses fs-uae_$(version)_macosx/FS-UAE.app/Contents/Resources/
-	cp ../COPYING fs-uae_$(version)_macosx/FS-UAE.app/Contents/Resources/
-	cp ../README fs-uae_$(version)_macosx/FS-UAE.app/Contents/Resources/
-	cd fs-uae_$(version)_macosx && ../standalone.py FS-UAE.app
