@@ -1,0 +1,1 @@
+const char *fs_uae_plugins_dir(void);
