@@ -1,46 +1,0 @@
-version = 2.5.6dev
-emulator_dir = fs-uae_$(version)_windows
-
-all: progdir zipfile setup
-
-clean:
-	rm -Rf fs-uae-*_windows*
-	rm -Rf fs-uae_*_windows*
-
-progdir:
-	rm -Rf $(emulator_dir)
-	mkdir $(emulator_dir)
-
-	make -C ..
-
-	cp /mingw32/bin/libgcc_s_*.dll $(emulator_dir)
-	cp /mingw32/bin/libstdc++*.dll $(emulator_dir)
-	cp /mingw32/bin/libwinpthread*.dll $(emulator_dir)
-	cp /opt/bin/libpng*.dll $(emulator_dir)
-	cp /opt/bin/*freetype*.dll $(emulator_dir)
-	cp /opt/bin/zlib1.dll $(emulator_dir)
-	cp /opt/bin/libglib-2.0-0.dll $(emulator_dir)
-	cp /opt/bin/libgthread-2.0-0.dll $(emulator_dir)
-	cp /opt/bin/libintl*.dll $(emulator_dir)
-	cp /opt/bin/libiconv*.dll $(emulator_dir)
-	cp /opt/bin/SDL2.dll $(emulator_dir)
-	cp /opt/bin/OpenAL32.dll $(emulator_dir)
-
-	cp -a ../fs-uae.exe $(emulator_dir)/
-	cp -a ../fs-uae.dat $(emulator_dir)/
-	cp -a ../fs-uae-device-helper.exe $(emulator_dir)/
-	cp -a ../../../libfs-capsimage/CAPSImg.dll $(emulator_dir) || cp -a ../../../../libfs-capsimage/CAPSImg.dll $(emulator_dir)
-	cp -a ../share $(emulator_dir)/share
-	cp -a ../licenses $(emulator_dir)/licenses
-	cp -a ../README $(emulator_dir)/README.txt
-	cp -a ../COPYING $(emulator_dir)/COPYING.txt
-	strip $(emulator_dir)/*.exe
-	strip $(emulator_dir)/*.dll
-	python /c/signtool.py $(emulator_dir)/*.exe
-
-zipfile:
-	cd $(emulator_dir) && zip -9 -r ../../$(emulator_dir).zip *
-
-setup:
-	iscc fs-uae.iss
-	python /c/signtool.py ../fs-uae_$(version)_windows.exe
