@@ -1,5 +1,6 @@
 Version 2.5.6dev:
 
+* Load libcapsimage from plugin instead of having it bundled.
 * Merged code from WinUAE 2810.
 * Updated built-in AROS rom [WinUAE 2.8.1].
 * Starting FS-UAE.app with config file works again on OS X.
